syntax = "proto3";

package database;
option go_package = ".";

service DatabaseService {
    rpc GetData(GetDataRequest) returns (GetDataResponse) {}
}

message GetDataRequest {
    string id = 1;
}

message GetDataResponse {
    string data = 1;
}